attempt to use security policy